# py_ta_gui

./: .gitignore  README.md  TA_merge_matrices.py  merge_TA_matrices.py  plot_TA_matrix.py  pyproject.toml  shared_supporting_functions.py  t0_correction_and_background_removal.py
src/pyTAgui/: TA_merge_matrices.py  TA_plot_matrix.py  TA_t0_correction_and_background_removal.py
